# JGLUE-evaluation-scripts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
config/: base_template.yaml  jcqa.debug.yaml  jcqa.yaml  jnli.debug.yaml  jnli.yaml  jsts.debug.yaml  jsts.yaml  marc_ja.debug.yaml  marc_ja.yaml
config/datamodule/: jcqa.yaml
config/datamodule/base/: test.yaml  train.yaml  valid.yaml
config/datamodule/test/: jsts.yaml  marc_ja.yaml
config/datamodule/train/: jcqa.yaml  jsts.yaml
config/datamodule/valid/: jcqa.yaml  jnli.yaml
config/module/: jcqa.yaml  jnli.yaml  jsts.yaml  marc_ja.yaml
config/trainer/: cpu.yaml  debug.yaml  default.yaml
configs/: base.yaml  eval.yaml  jcola.debug.yaml  jcola.yaml  jcqa.debug.yaml  jcqa.yaml  jnli.debug.yaml  jnli.yaml  jsquad.debug.yaml  jsquad.yaml  jsts.debug.yaml  jsts.yaml  marc_ja.debug.yaml  marc_ja.yaml
configs/datamodule/: jcola.yaml  jnli.yaml  jsquad.yaml  jsts.yaml  marc_ja.yaml
configs/datamodule/base/: test.yaml  train.yaml  valid.yaml
configs/datamodule/test/: jcola.yaml  jcqa.yaml  jnli.yaml  jsquad.yaml  jsts.yaml  marc_ja.yaml
configs/datamodule/train/: jcola.yaml  jcqa.yaml  jnli.yaml  jsquad.yaml  jsts.yaml  marc_ja.yaml
configs/datamodule/valid/: jcola.yaml  jcola_ood.yaml  jcola_ood_annotated.yaml  jcqa.yaml  jnli.yaml  jsquad.yaml  jsts.yaml  marc_ja.yaml
configs/model/: deberta_v2_large.yaml  deberta_v2_tiny.yaml  deberta_v3_base.yaml  luke_base.yaml  luke_large.yaml  microsoft__mdeberta_v3_base.yaml  modernbert_130m.yaml  modernbert_30m.yaml  modernbert_310m.yaml  modernbert_70m.yaml  roberta_base.yaml  roberta_large.yaml
configs/module/: jcola.yaml  jcqa.yaml  jnli.yaml  jsquad.yaml  jsts.yaml  marc_ja.yaml
configs/optimizer/: adamw.yaml
configs/trainer/: cpu.yaml  debug.yaml  default.yaml  mps.yaml
scripts/: gen_sweeps.sh  gen_table.py  run_sweeps.sh
src/: test.py  train.py
src/datamodule/: datamodule.py  util.py
src/datamodule/datasets/: __init__.py  base.py  jcola.py  jcqa.py  jnli.py  jsquad.py  jsts.py  marc_ja.py  util.py
src/metrics/: __init__.py  jsquad.py
src/modules/: __init__.py  base.py  jcola.py  jcqa.py  jnli.py  jsquad.py  jsts.py  marc_ja.py
sweep/: marc_ja_deberta_base.yaml
sweep/marc_ja/: deberta_large.yaml  roberta_base.yaml  roberta_large.yaml
sweeps/: jcola.yaml  jcqa.yaml  jnli.yaml  jsquad.yaml  jsts.yaml  marc_ja.yaml
sweeps/jcola/: deberta_base.yaml  deberta_large.yaml  roberta_base.yaml  roberta_large.yaml
sweeps/jcqa/: deberta_base.yaml  deberta_large.yaml  roberta_base.yaml  roberta_large.yaml
sweeps/jnli/: deberta_base.yaml  deberta_large.yaml  roberta_base.yaml  roberta_large.yaml
sweeps/jsquad/: deberta_base.yaml  deberta_large.yaml  roberta_base.yaml  roberta_large.yaml
sweeps/jsts/: deberta_base.yaml  deberta_large.yaml  roberta_base.yaml  roberta_large.yaml
sweeps/marc_ja/: deberta_base.yaml  deberta_large.yaml  roberta_base.yaml  roberta_large.yaml
tests/: conftest.py  test_jsquad_metric.py
tests/datasets/: conftest.py  test_jsquad.py
tests/metrics/: test_squad.py
